[package]
name = "react_magnetic_di_swc_plugin"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true

[dependencies]
serde = "1"
swc_core = { version = "0.101.*", features = ["ecma_plugin_transform", "swc_ecma_parser", "ecma_ast"] }
swc_ecma_parser = "*"

# .cargo/config defines few alias to build plugin.
# cargo build-wasi generates wasm-wasi32 binary
# cargo build-wasm32 generates wasm32-unknown-unknown binary.
